tests/ui/associated-inherent-types/issue-111879-1.stderr
error[E0580]: `main` function has wrong type
  --> $DIR/issue-111879-1.rs:12:1
   |
LL | fn main(_: for<'a> fn(Foo<fn(&'a ())>::Assoc)) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ incorrect number of function parameters
   |
   = note: expected fn pointer `fn()`
              found fn pointer `fn(for<'a> fn(Foo<fn(&'a ())>::Assoc))`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0580`.
